Easy spaces/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <nameField>
        <displayFormat>Offer-{0000}</displayFormat>
        <label>Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>