Easy spaces/main/default/objects/Offer__c/fields/BGC_Status__c.field-meta.xml
<CustomField>
    <fullName>BGC_Status__c</fullName>
    <label>BGC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>