Easy spaces/main/default/objects/Offer__c/fields/Offer_Letter_Issued__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Letter Issued</label>
    <type>Checkbox</type>
</CustomField>